GNOME Bugzilla – Bug 693077
GtkRecentManager doesn't send "changed" when file is deleted
Last modified: 2016-04-10 17:49:02 UTC
GtkRecentManager doesn't handle the deletion of ~/.local/share/recently-used.xbel properly. Deleting the file doesn't trigger a changed signal, so gvfsd-recent doesn't empty itself, and dirtying recent:/// would cause gvsfd-recent to write down what it thought was the current recent-files, effectively restoring the recently-used.xbel file from memory.
Fixed in master. commit bccef4e41aa45801b96dfd1c33a376d2fa1bb6e6 Author: Emmanuele Bassi <ebassi@gnome.org> Date: Sun Apr 10 18:28:01 2016 +0100 recent-manager: Emit ::changed on file deletion This will clear out the list of recently used files, and will allow GVFS to handle this case. https://bugzilla.gnome.org/show_bug.cgi?id=693077